feat: list equipments and daily measures
