# backend/src/server/http/http-routes/index.ts
@@ -2,3 +2,4 @@ export * from "./user.routes";
 export * from "./login.routes";
 export * from "./faq.routes";
 export * from "./census.routes";
+export * from "./equipments.routes";
